force-app/main/default/objects/Dependent__c.object
<CustomObject>
    <label>Dependent</label>
    <nameField>
        <label>Dependent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>