force-app/main/default/objects/Dependent__c/fields/Coverage_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Eligibility__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Coverage Eligibility</label>
    <type>Checkbox</type>
</CustomField>