force-app/main/default/objects/Dependent__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Dependents</relationshipLabel>
    <relationshipName>Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>