force-app/main/default/objects/Dependent__c/fields/Is_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Is_Beneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Beneficiary</label>
    <type>Checkbox</type>
</CustomField>